export interface store{
    idStore: string;
    addresse: string;
}